==================== 2.25.92 ====================

2009-02-26  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-error.c: (panel_error_dialog): Use close button
	instead of ok button in error dialogs.

2009-02-24  Vincent Untz  <vuntz@gnome.org>

	Fix some randr-interaction by connecting to the monitors-changed
	signal.
	Fix bug #572933.
	Patch by Matthias Clasen <mclasen@redhat.com>

	* panel-multiscreen.c: (panel_multiscreen_reinit_idle),
	(panel_multiscreen_queue_reinit): use an idle loop as callback since we
	can get two signals emitted at the same time.
	(panel_multiscreen_init): connect to monitors-changed too
	(panel_multiscreen_reinit): trivial update

==================== 2.25.91 ====================

2009-02-16  Vincent Untz  <vuntz@gnome.org>

	* panel-default-setup.entries: remove mixer from the panel layout since
	we don't use an applet by default anymore (it's in the notification
	area now). Distributions still shipping the applet will probably patch
	this back.

==================== 2.25.90 ====================

2009-01-21  Frederic Crozat  <fcrozat@mandriva.com>

	* panel-applet-frame.c:
	* panel.c:
	Fix format security warnings.

2009-01-21  Vincent Untz  <vuntz@gnome.org>

	If an applet is not loading, it blocks the panel initial animation. So
	add a timeout of 5 seconds to always show the panels after this
	timeout.

	* applet.c: (panel_applet_queue_initial_unhide_toplevels): GSourceFunc
	again, and remove the timeout
	(panel_applet_stop_loading), (panel_applet_load_idle_handler): trivial
	updates
	(panel_applet_load_queued_applets): add the timeout

==================== 2.25.5.1 ====================

2009-01-21  Vincent Untz  <vuntz@gnome.org>

	* applet.c: (panel_applet_load_idle_handler): add missing break that
	makes the panel reach an assertion when a separator exists in the user
	configuration.

==================== 2.25.5 ====================

2009-01-20  Vincent Untz  <vuntz@gnome.org>
