@@ -1,3 +1,8 @@
+2009-03-11  Vincent Untz  <vuntz@gnome.org>
+
+	* panel-menu-items.c: (panel_place_menu_item_append_local_gio),
+	(panel_place_menu_item_append_remote_gio): ignore shadow mounts.
+
 ==================== 2.25.92 ====================
 
 2009-02-26  Vincent Untz  <vuntz@gnome.org>
